--- a/layout.css
+++ b/layout.css
@@ -7,8 +7,10 @@ html {
 
 body {
     min-height: 100%;
+    max-width: 100%;
     display: flex;
-    margin: 0;
+    margin: 0 auto;
+    padding: 0;
     flex-direction: column;
     box-sizing: border-box;
 }
